{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 120,
  "lineage": "18424bd7-1546-5538-c887-a2cff36a45c8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:vpc/vpc-1437646e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-2158744d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-2348b559",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-1437646e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-78bd6306",
            "owner_id": "413602170175"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "network_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413602170175:loadbalancer/net/sample-app-development-alb/df1826b4c03bbb48",
            "arn_suffix": "net/sample-app-development-alb/df1826b4c03bbb48",
            "dns_name": "sample-app-development-alb-df1826b4c03bbb48.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:413602170175:loadbalancer/net/sample-app-development-alb/df1826b4c03bbb48",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sample-app-development-alb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0865629eb5511ffb3"
              },
              {
                "subnet_id": "subnet-0c554fa40caf0843a"
              }
            ],
            "subnets": [
              "subnet-0865629eb5511ffb3",
              "subnet-0c554fa40caf0843a"
            ],
            "tags": {
              "Environment": "development",
              "Name": "sample-app-alb"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-alb"
            },
            "vpc_id": "vpc-1437646e",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_eip.one",
            "aws_eip.two",
            "aws_subnet.public",
            "data.aws_subnets.public",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a0c3cafd2ae9af4",
            "domain": "vpc",
            "id": "eipalloc-07a0c3cafd2ae9af4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-89-165-190.compute-1.amazonaws.com",
            "public_ip": "3.89.165.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sample-app-eip"
            },
            "tags_all": {
              "Name": "sample-app-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dc1bdc9ece73ea3",
            "domain": "vpc",
            "id": "eipalloc-00dc1bdc9ece73ea3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-90-75-82.compute-1.amazonaws.com",
            "public_ip": "3.90.75.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sample-app-eip"
            },
            "tags_all": {
              "Name": "sample-app-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413602170175:listener/net/sample-app-development-alb/df1826b4c03bbb48/a721ff224e90d6b1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:413602170175:targetgroup/sample-app-development-tg/85eb412d29a789ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:413602170175:listener/net/sample-app-development-alb/df1826b4c03bbb48/a721ff224e90d6b1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:413602170175:loadbalancer/net/sample-app-development-alb/df1826b4c03bbb48",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.network_load_balancer",
            "aws_eip.one",
            "aws_eip.two",
            "aws_lb_target_group.target_group",
            "aws_subnet.public",
            "data.aws_subnets.public",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413602170175:targetgroup/sample-app-development-tg/85eb412d29a789ed",
            "arn_suffix": "targetgroup/sample-app-development-tg/85eb412d29a789ed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:413602170175:targetgroup/sample-app-development-tg/85eb412d29a789ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-app-development-tg",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "sample-app-lb-tg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-1437646e"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:route-table/rtb-01fd6cdcb0ca46ff6",
            "id": "rtb-01fd6cdcb0ca46ff6",
            "owner_id": "413602170175",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "sample-app-routing-table-public"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-1437646e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:security-group/sg-0f31841b0ba2de4f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f31841b0ba2de4f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240219190019082900000001",
            "name_prefix": "terraform-",
            "owner_id": "413602170175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "sample-app-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-1437646e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:security-group/sg-04024db19c850657e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04024db19c850657e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240219190019585700000002",
            "name_prefix": "terraform-",
            "owner_id": "413602170175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "sample-app-service-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-1437646e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:subnet/subnet-061cf30deda0591e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.150.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061cf30deda0591e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413602170175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "sample-app-private-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-private-subnet-1"
            },
            "vpc_id": "vpc-1437646e"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:subnet/subnet-0bb3ce17064cdbd22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb3ce17064cdbd22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413602170175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "sample-app-private-subnet-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-private-subnet-2"
            },
            "vpc_id": "vpc-1437646e"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:subnet/subnet-0c554fa40caf0843a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c554fa40caf0843a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413602170175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "sample-app-public-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-public-subnet-1"
            },
            "vpc_id": "vpc-1437646e"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413602170175:subnet/subnet-0865629eb5511ffb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0865629eb5511ffb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413602170175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "sample-app-public-subnet-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "sample-app-public-subnet-2"
            },
            "vpc_id": "vpc-1437646e"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}